# Guide_Bot

./: docker-compose.yml  pyproject.toml  readme.md  파이프라인
app/: ingest_data.py  ingest_data_local.py  main.py
data/: dummy.txt  product_faq.txt  system_prompt.txt
templates/: index.html
